--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ tests/__pycache__/__init__.cpython-39.pyc
 tests/__pycache__/test_adventurer.cpython-39-pytest-8.2.2.pyc
 .idea/misc.xml
 .idea/DungeonAdventure.iml
+.idea/DungeonAdventure.iml
