--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,10 @@
+# Ignore Python bytecode
+__pycache__/
 
-.idea/DungeonAdventure.iml
-.idea/DungeonAdventure.iml
-.idea/DungeonAdventure.iml
-.idea/misc.xml
-src/__pycache__/__init__.cpython-39.pyc
-src/__pycache__/Adventurer.cpython-39.pyc
-src/__pycache__/Item.cpython-39.pyc
-src/__pycache__/Pillar.cpython-39.pyc
-src/characters/__pycache__/__init__.cpython-39.pyc
-src/characters/__pycache__/adventurer.cpython-39.pyc
-src/dungeon/__pycache__/__init__.cpython-39.pyc
-src/dungeon/__pycache__/dungeon.cpython-39.pyc
-src/dungeon/__pycache__/room.cpython-39.pyc
-src/enums/__pycache__/__init__.cpython-39.pyc
-src/enums/__pycache__/character_types.cpython-39.pyc
-src/enums/__pycache__/item_types.cpython-39.pyc
-src/enums/__pycache__/room_types.cpython-39.pyc
-src/items/__pycache__/__init__.cpython-39.pyc
-src/items/__pycache__/item.cpython-39.pyc
-src/items/__pycache__/pillar.cpython-39.pyc
-tests/__pycache__/__init__.cpython-39.pyc
-tests/__pycache__/test_adventurer.cpython-39-pytest-8.2.2.pyc
-.idea/misc.xml
-.idea/DungeonAdventure.iml
-.idea/DungeonAdventure.iml
+# Ignore virtual environments
+venv/
+venv_windows/
+
+# Ignore IDE settings
+.vscode/
+.idea/
