feat(combat): Create combat related observer classes
- Create new combat_handler.py, combat_observer.py, and
combat_participant.py files
- Add inline code info snippets plugin to mkdocs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,8 @@
 site_name: Dungeon Adventure Developer Documentation
 theme:
   name: material
+  features:
+    - content.code.annotate
   palette:
     primary: indigo
     accent: amber
@@ -31,3 +33,4 @@ markdown_extensions:
 
 plugins:
   - search
+  - typeset
