--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,46 @@
+babel==2.15.0
 blinker==1.8.2
+certifi==2024.7.4
+charset-normalizer==3.3.2
 click==8.1.7
-Flask==3.0.3
+colorama==0.4.6
+ghp-import==2.1.0
+greenlet==3.0.3
+idna==3.7
 iniconfig==2.0.0
 itsdangerous==2.2.0
-Jinja2==3.1.4
-MarkupSafe==2.1.5
-numpy==2.0.0
+jinja2==3.1.4
+markdown==3.6
+markdown-it-py==3.0.0
+markupsafe==2.1.5
+mdurl==0.1.2
+mergedeep==1.3.4
+mkdocs==1.6.0
+mkdocs-get-deps==0.2.0
+mkdocs-material==9.5.30
+mkdocs-material-extensions==1.3.1
+msgpack==1.0.8
 packaging==24.1
-pandas==2.2.2
+paginate==0.5.6
+pathspec==0.12.1
+pip==24.2
+platformdirs==4.2.2
 pluggy==1.5.0
+pygame-ce==2.5.0
+pygments==2.18.0
+pymdown-extensions==10.9
+pynvim==0.5.0
 pytest==8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
+pyyaml==6.0.1
+pyyaml-env-tag==0.1
+regex==2024.7.24
+requests==2.32.3
+rich==13.7.1
+ruff==0.5.5
 six==1.16.0
 tzdata==2024.1
-Werkzeug==3.0.3
-
-rich~=13.7.1
+urllib3==2.2.2
+watchdog==4.0.1
+werkzeug==3.0.3
