--- a/requirements.txt
+++ b/requirements.txt
@@ -30,14 +30,14 @@ pygame-ce==2.5.0
 pygments==2.18.0
 pymdown-extensions==10.9
 pynvim==0.5.0
-pytest==8.2.2
+pytest~=8.2.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
 pyyaml==6.0.1
 pyyaml-env-tag==0.1
 regex==2024.7.24
 requests==2.32.3
-rich==13.7.1
+rich~=13.7.1
 ruff==0.5.5
 six==1.16.0
 tzdata==2024.1
